    * [CLOWNFISH-45] - Dynamically subclassing a final class should fail
    * [CLOWNFISH-47] - Tighten up final method code gen and optimization
    * [CLOWNFISH-62] - Crash when passing Perl variable as decremented arg
    * [CLOWNFISH-63] - Don't export private methods via Go
    * [CLOWNFISH-69] - Clownfish::CFC missing from CPAN prereqs

  Improvements:

    * [CLOWNFISH-7] - String-only keys for Hash
    * [CLOWNFISH-11] - Rework ByteBuf
    * [CLOWNFISH-15] - Method OFFSET vars should be uint32_t instead of
                       size_t
    * [CLOWNFISH-27] - Use functions rather than methods for refcounting
    * [CLOWNFISH-29] - Use PERL_NO_GET_CONTEXT
    * [CLOWNFISH-30] - Eliminate autogenerated "callbacks.h"
    * [CLOWNFISH-34] - String-only keys for LFReg
    * [CLOWNFISH-35] - Use size_t for Array and Hash indices
    * [CLOWNFISH-39] - Public Vector API
    * [CLOWNFISH-40] - LockFreeRegistry should be private
    * [CLOWNFISH-42] - Move NumberUtils to Lucy
    * [CLOWNFISH-49] - Remove Obj_Mimic, Obj_To_[FI]64, Obj_To_Bool
    * [CLOWNFISH-50] - Convert some Obj methods to inert functions
    * [CLOWNFISH-51] - Go glue should convert clownfish.String to Go string
    * [CLOWNFISH-52] - Implement To_Host methods for core types
    * [CLOWNFISH-53] - Support MSVC in C mode
    * [CLOWNFISH-56] - Map Clownfish composite types to Go host types
    * [CLOWNFISH-57] - Map clownfish.Obj to Go empty interface
    * [CLOWNFISH-58] - Refine Hash API
    * [CLOWNFISH-59] - Refine Go bindings
    * [CLOWNFISH-61] - Run core tests under Go bindings
    * [CLOWNFISH-65] - Refresh intro docs
    * [CLOWNFISH-70] - Export major version from Perl bindings
    * [CLOWNFISH-79] - Improve generated Perl bindings

0.4.4 2016-01-26

  Bugfixes:

    * [CLOWNFISH-3] - Charmonizer bombs out trying to set warnings as
                      errors with Strawberry Perl
    * [CLOWNFISH-69] - Clownfish::CFC missing from CPAN prereqs

0.4.3 2016-01-09

  Bugfixes:
